--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/QT Logo 2021.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="QT Bathroom Logger"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="QT Bathroom Logger"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/QT Logo 2021.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
